<?xml version="1.0" encoding="utf-8"?>
<!-- gg -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/radius_main_color"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            >

            <ImageView
                android:src="@drawable/profile_icon_2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/profile_photoDescription"
                android:onClick="editProfileClick"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20pt"
                android:layout_margin="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/radius_main_color"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questions_askedLabel"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="8pt"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_askedLabel"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="8pt"
                    android:layout_margin="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questions_answeredLabel"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="8pt"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_answeredLabel"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="8pt"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/radius_light_grey"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:padding="5dp"
            >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:src="@drawable/info_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:contentDescription="info" />
                    <Button
                        android:id="@+id/personalinfobutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:autofillHints=""
                        android:gravity="start|center_vertical"
                        android:text="@string/personal_informationLabel"
                        android:layout_marginBottom="2dp"
                        android:onClick="personalInfoClick"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:src="@drawable/question_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:contentDescription="posted questions" />
                    <Button
                        android:id="@+id/postedquestionsbutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:autofillHints=""
                        android:gravity="start|center_vertical"
                        android:text="@string/posted_questionsLabel"
                        android:layout_marginBottom="2dp"
                        android:onClick="postedQuestionsClick"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:src="@drawable/tutor_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:contentDescription="tutors"/>
                    <Button
                        android:id="@+id/tutorsbutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:autofillHints=""
                        android:gravity="start|center_vertical"
                        android:text="@string/tutorsLabel"
                        android:layout_marginBottom="2dp"
                        android:onClick="tutorsClick"
                        />
                </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>